k8sold/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: local-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: wordpress
          image: ghcr.io/floydano/local-deploy:1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: wp-data
              mountPath: /var/www/html/wp-content
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 90
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
      volumes:
        - name: wp-data
          persistentVolumeClaim:
            claimName: wp-pvc
