k8sold/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: local-deploy
spec:
  type: ClusterIP
  selector:
    app: wordpress
  ports:
    - name: http
      port: 80
      targetPort: 80
